Add Caffe reference

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -174,5 +174,20 @@
 	note = {arXiv: 1707.00478},
 	keywords = {Computer Science - Computer Vision and Pattern Recognition},
 	pages = {64--76},
-	file = {arXiv\:1707.00478 PDF:/Users/fernando/Zotero/storage/R4PIDJ7B/Fidon et al. - 2018 - Generalised Wasserstein Dice Score for Imbalanced .pdf:application/pdf}
+	file = {arXiv\:1707.00478 PDF:/Users/fernando/Zotero/storage/R4PIDJ7B/Fidon et al. - 2018 - Generalised Wasserstein Dice Score for Imbalanced .pdf:application/pdf;arXiv.org Snapshot:/Users/fernando/Zotero/storage/T7CVI2UH/1707.html:text/html}
+}
+
+@article{jia_caffe:_2014,
+	title = {Caffe: {Convolutional} {Architecture} for {Fast} {Feature} {Embedding}},
+	shorttitle = {Caffe},
+	url = {http://arxiv.org/abs/1408.5093},
+	abstract = {Caffe provides multimedia scientists and practitioners with a clean and modifiable framework for state-of-the-art deep learning algorithms and a collection of reference models. The framework is a BSD-licensed C++ library with Python and MATLAB bindings for training and deploying general-purpose convolutional neural networks and other deep models efficiently on commodity architectures. Caffe fits industry and internet-scale media needs by CUDA GPU computation, processing over 40 million images a day on a single K40 or Titan GPU (\${\textbackslash}approx\$ 2.5 ms per image). By separating model representation from actual implementation, Caffe allows experimentation and seamless switching among platforms for ease of development and deployment from prototyping machines to cloud environments. Caffe is maintained and developed by the Berkeley Vision and Learning Center (BVLC) with the help of an active community of contributors on GitHub. It powers ongoing research projects, large-scale industrial applications, and startup prototypes in vision, speech, and multimedia.},
+	urldate = {2018-03-26},
+	journal = {arXiv:1408.5093 [cs]},
+	author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
+	month = jun,
+	year = {2014},
+	note = {arXiv: 1408.5093},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Learning, Computer Science - Neural and Evolutionary Computing},
+	file = {arXiv\:1408.5093 PDF:/Users/fernando/Zotero/storage/5A3GBXRX/Jia et al. - 2014 - Caffe Convolutional Architecture for Fast Feature.pdf:application/pdf;arXiv.org Snapshot:/Users/fernando/Zotero/storage/KRW442VI/1408.html:text/html}
 }
